--- a/requirements.txt
+++ b/requirements.txt
@@ -5,14 +5,6 @@ streamlit_tags
 streamlit_agraph
 graphviz
 matplotlib
+cluster 
 
-
-lmdb
-networkx
-nltk 
-numpy 
-pandas 
-Pattern 
-scikit-learn 
-scipy
 
